# BaaS

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
app/api/v1/: branding.py
app/core/: config.py
app/models/BAML/: baml.Dockerfile
app/models/BAML/baml_src/: brandstrategy.baml  clients.baml  customerprofile.baml.bak
app/models/pydantic/: __init__.py  brand_emotion.py  brand_strategy.py  brand_visual.py
app/services/: branding_service.py
tests/: README.md  conftest.py
tests/api/v1/: __init__.py  test_branding.py
tests/data/: Olillac_extracted.md
tests/services/: test_branding_service.py
