[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "baml-py>=0.211.2",
    "docling>=2.57.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
